--- a/app/src/main/res/layout/hotel_list_fragment.xml
+++ b/app/src/main/res/layout/hotel_list_fragment.xml
@@ -29,6 +29,17 @@
                 android:fontFamily="sans-serif"
                 android:textColor="@color/black"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/hotel_list_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/heading_text_view"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
