--- a/app/src/main/res/layout/hotel_search_layout.xml
+++ b/app/src/main/res/layout/hotel_search_layout.xml
@@ -104,6 +104,30 @@
                 android:inputType="number" />
 
             <TextView
+                android:id="@+id/name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/guests_text_view"
+                app:layout_constraintTop_toBottomOf="@id/guests_text_view"
+                android:text="Enter Your Name"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif"
+                android:textAlignment="textStart"
+                android:gravity="start" />
+
+            <EditText
+                android:id="@+id/name_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/name_text_view"
+                app:layout_constraintTop_toTopOf="@id/name_text_view"
+                app:layout_constraintBottom_toBottomOf="@id/name_text_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:hint="Your Name" />
+
+
+            <TextView
                 android:id="@+id/search_confirm_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -112,7 +136,7 @@
                 android:layout_marginLeft="10dp"
                 app:layout_constraintStart_toStartOf="@id/guests_text_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/guests_text_view"/>
+                app:layout_constraintTop_toBottomOf="@id/name_text_view"/>
 
             <Button
                 android:id="@+id/confirm_my_search_button"
@@ -133,6 +157,28 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/confirm_my_search_button"/>
+
+            <Button
+                android:id="@+id/clear_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Clear"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/search_button"/>
+
+
+            <Button
+                android:id="@+id/retrieve_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Retrieve From Shared Pref"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/clear_button"/>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
